chore(mon-pix): fix PixBlock spacings

--- a/mon-pix/app/styles/components/_user-certifications-detail-competence.scss
+++ b/mon-pix/app/styles/components/_user-certifications-detail-competence.scss
@@ -1,5 +1,4 @@
 .user-certifications-detail-competence {
-  padding: 0;
   margin-bottom: 32px;
 
   @mixin leftElement {
