--- a/mon-pix/app/styles/components/authentication/_oidc-reconciliation.scss
+++ b/mon-pix/app/styles/components/authentication/_oidc-reconciliation.scss
@@ -119,8 +119,8 @@
   }
 
   &__authentication-method-to-add {
+    margin-bottom: 32px;
     border-radius: 8px;
-    padding: 0;
 
     dl {
       margin: 0;
